--- a/WebAPI/app.config
+++ b/WebAPI/app.config
@@ -2,5 +2,6 @@
 <configuration>
     <appSettings>  
         <add key="DatabaseType" value="mongodb"/>
+        <add key="connectionString" value="mySecretConnectionString"/>
     </appSettings> 
 </configuration>
