Finalized integration tests and made minor adjustments

--- a/WebAPI/app.config
+++ b/WebAPI/app.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>  
-        <add key="DatabaseType" value="mongodb"/>
-        <add key="connectionString" value="mySecretConnectionString"/>
+        <add key="DatabaseType" value="mysql"/>
     </appSettings> 
 </configuration>
