Externalized more config variables into the app.config file

--- a/WebAPI/app.config
+++ b/WebAPI/app.config
@@ -2,5 +2,8 @@
 <configuration>
     <appSettings>  
         <add key="DatabaseType" value="mongodb"/>
+        <add key="trustedUrl1" value="http://localhost:3000" />
+        <add key="trustedUrl2" value="http://localhost:4200" />
+        <add key="trustedUrl3" value="http://localhost" />
     </appSettings> 
 </configuration>
