--- a/WebAPI/app.config
+++ b/WebAPI/app.config
@@ -3,7 +3,7 @@
     <appSettings>  
         <add key="DatabaseType" value="mongodb"/>
         <add key="trustedUrl1" value="http://localhost:3000" />
-        <add key="trustedUrl2" value="http://localhost:4200" />
+        <add key="trustedUrl2" value="http://40.87.128.255:90" />
         <add key="trustedUrl3" value="http://localhost" />
     </appSettings> 
 </configuration>
