Made changes to make dockerization work properly

--- a/WebAPI/app.config
+++ b/WebAPI/app.config
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>  
-        <add key="DatabaseType" value="mongodb"/>
-        <add key="trustedUrl1" value="http://localhost:3000" />
-        <add key="trustedUrl2" value="http://40.87.128.255:90" />
-        <add key="trustedUrl3" value="http://localhost" />
+        <add key="DatabaseType" value="mysql"/>
     </appSettings> 
 </configuration>
