--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,5 +7,12 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "http://localhost:21561"
+  "Urls": "http://localhost:4000",
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://+:4000"
+      }
+    }
+  }
 }
