--- a/WebAPI/app.config
+++ b/WebAPI/app.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <appSettings>  
-        <add key="DatabaseType" value="mysql"/>
+    <appSettings>
+        <!-- Values available: mysql, mongodb, azuresql -->
+        <add key="DatabaseType" value="azuresql"/> 
     </appSettings> 
 </configuration>
